--- a/bucket/admin/m-package.html
+++ b/bucket/admin/m-package.html
@@ -679,7 +679,7 @@
             <section id="analytics-section" class="content-section">
                 <div class="head-title">
                     <div class="left">
-                        <h1>Package Analytics</h1>
+                        <h1>Analytics</h1>
                         <ul class="breadcrumb">
                             <li>
                                 <a href="#">Dashboard</a>
@@ -690,8 +690,8 @@
                             </li>
                         </ul>
                     </div>
-                    <button id="exportData" class="btn-download text-white">
-                        <i class="fas fa-file-excel mr-2"></i>Export
+                    <button id="exportData" class="btn-download">
+                        <i class="fas fa-file-excel text-white"></i>
                     </button>
                 </div>
 
@@ -907,11 +907,11 @@
             <section id="withdraw-section" class="content-section">
                 <div class="head-title">
                     <div class="left">
-                        <h1>Payout Method</h1>
+                        <h1>Payout</h1>
                         <ul class="breadcrumb">
                             <li><a href="#">Dashboard</a></li>
                             <li><i class='bx bx-chevron-right'></i></li>
-                            <li><a class="active" href="#">Payout Method</a></li>
+                            <li><a class="active" href="#">Payout</a></li>
                         </ul>
                     </div>
                 </div>
@@ -968,8 +968,8 @@
                     <div class="card full-width mt-6">
                         <div class="card-header">
                             <h2 class="card-title">Payout History</h2>
-                          <button onclick="exportPayoutEventsToExcel()" class="btn btn-success">
-  <i class="fas fa-file-excel mr-2"></i> Export
+                          <button onclick="exportPayoutEventsToExcel()" class="px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700">
+  <i class="fas fa-file-excel mr-2"></i>
 </button>
                         </div>
                         <div class="card-body">
