--- a/bucket/admin/m-package.html
+++ b/bucket/admin/m-package.html
@@ -281,17 +281,17 @@
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-6">
                         <!-- Package Performance Chart -->
                         <div class="glass-card p-5 rounded-xl">
-                            <div class="card-header">
-                                <h2 class="font-medium text-lg mb-4 flex items-center">
-                                <i class="fas fa-chart-line text-amber-500 mr-2"></i> Package Performance
-                            </h2>
-                                <div class="card-actions">
-                                    <select id="packagePerformanceMetric" class="filter-btn">
-                                        <option value="bookings">By Bookings</option>
-                                        <option value="revenue">By Revenue</option>
-                                    </select>
-                                </div>
-                            </div>
+                            <div class="card-header flex flex-col sm:flex-row sm:items-center sm:justify-between space-y-4 sm:space-y-0">
+    <h2 class="font-medium text-lg flex items-center">
+        <i class="fas fa-chart-line text-amber-500 mr-2"></i> Package Performance
+    </h2>
+    <div class="card-actions">
+        <select id="packagePerformanceMetric" class="filter-btn">
+            <option value="bookings">By Bookings</option>
+            <option value="revenue">By Revenue</option>
+        </select>
+    </div>
+</div>
                             <div class="card-body">
                                 <div class="chart-container">
                                     <canvas id="packagePerformanceChart"></canvas>
