--- a/bucket/admin/m-package.html
+++ b/bucket/admin/m-package.html
@@ -970,7 +970,7 @@
                                 <i class="fas fa-wallet"></i>
                             </div>
                             <div class="stat-info">
-                                <div class="stat-value" id="totalRevenue">EGP 0</div>
+                                <div class="stat-value" id="avpayout">EGP 0</div>
                                 <div class="stat-label">Withdrawable amount</div>
                             </div>
                         </div>
