--- a/bucket/admin/m-package.html
+++ b/bucket/admin/m-package.html
@@ -1025,17 +1025,17 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="username">Your Name</label>
+                                    <label for="userName">Your Name</label>
                                     <input class="text-sm" type="text" id="userName" value="" readonly>
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="email">Email</label>
+                                    <label for="userEmail">Email</label>
                                     <input class="text-sm" type="email" id="userEmail" value="" readonly>
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="phone">Phone</label>
+                                    <label for="userPhone">Phone</label>
                                     <input class="text-sm" type="phone" id="userPhone" value="" readonly>
                                 </div>
                             </form>
