--- a/bucket/admin/m-package.html
+++ b/bucket/admin/m-package.html
@@ -726,7 +726,7 @@
                     
                     <div class="charts-grid">
                         <!-- Popular Packages Chart -->
-                        <div class="glass-card p-5 rounded-xl">
+                        <div class="card">
                              <div class="card-header">
                                 <h3 class="font-medium text-lg mb-4 flex items-center">
                                   <i class="fas fa-trophy text-blue-500 mr-2"></i> Popular Packages
