--- a/bucket/admin/m-package.html
+++ b/bucket/admin/m-package.html
@@ -280,7 +280,7 @@
                     <!-- Main Charts Grid -->
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-6">
                         <!-- Package Performance Chart -->
-                        <div class="glass-card p-5 rounded-xl">
+                       <div class="card">
                             <div class="card-header flex flex-col sm:flex-row sm:items-center sm:justify-between space-y-4 sm:space-y-0">
     <h2 class="font-medium text-lg flex items-center">
         <i class="fas fa-chart-line text-amber-500 mr-2"></i> Package Performance
