--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -892,17 +892,27 @@
                         </div>
                     </div>
 
+                    <div class="stat-card w-full">
+                            <div class="stat-icon">
+                                <i class="fas fa-wallet"></i>
+                            </div>
+                            <div class="stat-info">
+                                <div class="stat-value" id="avpayout">EGP 0</div>
+                                <div class="stat-label">Withdrawable amount</div>
+                            </div>
+                        </div>
+
                     <!-- Events Section -->
                     <div class="card full-width mt-6">
                         <div class="card-header">
-                            <h2 class="card-title">Events</h2>
+                            <h2 class="card-title">Payout History</h2>
+                          <button onclick="exportPayoutEventsToExcel()" class="px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700">
+  <i class="fas fa-file-excel"></i>
+</button>
                         </div>
                         <div class="card-body">
                             <div class="event-list">
-                                <div class="event-item">
-                                    <span class="event-date"></span>
-                                    <span class="event-description"></span>
-                                </div>
+                             <div id="payout-output"></div>
                             </div>
                         </div>
                     </div>
