--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -857,8 +857,8 @@
                                     <label for="payoutMethod">Payout Method</label>
                                     <div>
                                         <select id="payoutMethod" class="w-full p-3 input-field rounded-lg text-sm focus:ring-2 focus:ring-amber-500">
-                                            <option value="wallet">Wallet</option>
-                                            <option value="bankAccount">Bank Account</option>
+                                            <option value="wallet">e-Wallet</option>
+                                            <option value="bankAccount" disabled>Bank Account ( soon )</option>
                                         </select>
                                     </div>
                                 </div>
