--- a/bucket/admin/m-package.html
+++ b/bucket/admin/m-package.html
@@ -931,7 +931,7 @@
                                     <div>
                                         <select id="payoutMethod" class="w-full p-3 input-field rounded-lg text-sm focus:ring-2 focus:ring-amber-500">
                                             <option value="wallet">Wallet</option>
-                                            <option value="bankAccount">Bank Account</option>
+                                            <option value="bankAccount" disabled>Bank Account ( soon )</option>
                                         </select>
                                     </div>
                                 </div>
