--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -252,7 +252,7 @@
                        <div class="card">
                             <div class="card-header flex flex-col sm:flex-row sm:items-center sm:justify-between space-y-4 sm:space-y-0">
     <h2 class="font-medium text-lg flex items-center">
-        <i class="fas fa-chart-line text-amber-500 mr-2"></i> Package Performance
+        <i class="fas fa-chart-line text-amber-500 mr-2"></i> Trip Performance
     </h2>
     <div class="card-actions">
         <select id="packagePerformanceMetric" class="filter-btn">
