--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -896,7 +896,7 @@
                                 <div class="stat-value" id="avpayout">EGP 0</div>
                                 <div class="stat-label">Withdrawable amount</div>
                             </div>
-                      <button class="px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700">
+                      <button class="px-4 py-2 bg-amber-600 text-white rounded hover:bg-amber-700">
   <i class="fas fa-wallet"> Request</i>
 </button>
                         </div>
