--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -896,8 +896,8 @@
                                 <div class="stat-value" id="avpayout">EGP 0</div>
                                 <div class="stat-label">Withdrawable amount</div>
                             </div>
-                      <button class="px-4 py-2 bg-amber-600 text-white rounded hover:bg-amber-700">
-  <i class="fas fa-wallet"> Request</i>
+                      <button id="requestPayoutBtn" class="px-4 py-2 bg-amber-600 text-white rounded hover:bg-amber-700 transition duration-200 focus:outline-none focus:ring-2 focus:ring-amber-500">
+  <i class="fas fa-wallet mr-2"></i> Withdraw
 </button>
                         </div>
 
