--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -888,17 +888,28 @@
                         </div>
                     </div>
 
-                    <div class="stat-card w-full">
-                            <div class="stat-icon">
-                                <i class="fas fa-wallet"></i>
-                            </div>
-                            <div class="stat-info">
-                                <div class="stat-value" id="avpayout">EGP 0</div>
-                                <div class="stat-label">Withdrawable amount</div>
-                            </div>
-                      <button id="requestPayoutBtn" class="px-4 py-2 bg-amber-600 text-white rounded hover:bg-amber-700 transition duration-200 focus:outline-none focus:ring-2 focus:ring-amber-500">
-                      <i class="fas fa-wallet mr-2"></i> Withdraw
-                      </button>
+                    <div class="stat-card w-full flex items-center justify-between p-4 bg-white rounded-lg shadow-md">
+  <div class="flex items-center space-x-4">
+    <!-- Icon -->
+    <div class="stat-icon p-3 bg-amber-100 text-amber-600 rounded-full">
+      <i class="fas fa-wallet text-xl"></i>
+    </div>
+
+    <!-- Info -->
+    <div class="stat-info">
+      <div class="stat-value text-2xl font-semibold text-gray-800" id="avpayout">EGP 0</div>
+      <div id="pendingBadge" class="hidden mt-2 px-3 py-1 bg-amber-100 text-amber-700 rounded-full text-sm font-medium">
+        Pending Request: EGP 0.00
+      </div>
+      <div class="stat-label text-sm text-gray-500">Withdrawable amount</div>
+    </div>
+  </div>
+
+  <!-- Button -->
+  <button id="requestPayoutBtn" class="px-4 py-2 bg-amber-600 text-white rounded hover:bg-amber-700 transition duration-200 focus:outline-none focus:ring-2 focus:ring-amber-500">
+    <i class="fas fa-wallet mr-2"></i> Request Withdrawal
+  </button>
+</div>
                       <!-- Loading Spinner -->
 <div id="loadingSpinner" class="hidden fixed inset-0 z-50 bg-black bg-opacity-50 items-center justify-center">
   <div class="flex flex-col items-center text-white">
