--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -888,7 +888,7 @@
                         </div>
                     </div>
 
-                    <div class="stat-card w-full flex items-center justify-between p-4 bg-white rounded-lg shadow-md">
+                    <div class="stat-card w-full flex items-center justify-between p-4 rounded-lg shadow-md">
   <div class="flex items-center space-x-4">
     <!-- Icon -->
     <div class="stat-icon p-3 bg-amber-100 text-amber-600 rounded-full">
@@ -897,11 +897,8 @@
 
     <!-- Info -->
     <div class="stat-info">
-      <div class="stat-value text-2xl font-semibold text-gray-800" id="avpayout">EGP 0</div>
-      <div id="pendingBadge" class="hidden mt-2 px-3 py-1 bg-amber-100 text-amber-700 rounded-full text-sm font-medium">
-        Pending Request: EGP 0.00
-      </div>
-      <div class="stat-label text-sm text-gray-500">Withdrawable amount</div>
+      <div class="stat-value text-2xl font-semibold " id="avpayout">EGP 0</div>
+      <div class="stat-label text-sm ">Withdrawable amount</div>
     </div>
   </div>
 
@@ -910,6 +907,8 @@
     <i class="fas fa-wallet mr-2"></i> Request Withdrawal
   </button>
 </div>
+
+                  
                       <!-- Loading Spinner -->
 <div id="loadingSpinner" class="hidden fixed inset-0 z-50 bg-black bg-opacity-50 items-center justify-center">
   <div class="flex flex-col items-center text-white">
@@ -920,7 +919,7 @@
 
 <!-- Confirmation Modal -->
 <div id="confirmModal" class="hidden fixed inset-0 z-50 bg-black bg-opacity-50 items-center justify-center">
-  <div class="bg-white p-6 rounded shadow-md w-80 text-center">
+  <div class="bg-[#333] p-6 rounded shadow-md w-80 text-center">
     <h3 class="text-lg font-semibold mb-4">Confirm Payout Request</h3>
     <p>Are you sure you want to submit this payout request?</p>
     <div class="mt-6 flex justify-around">
@@ -944,6 +943,9 @@
                         </div>
                         <div class="card-body">
                             <div class="event-list">
+                              <div id="pendingBadge" class="hidden mt-2 px-3 py-1 bg-amber-100 text-amber-700 rounded-full text-sm font-medium">
+        Pending Request: EGP 0.00
+                              </div>
                              <div id="payout-output"></div>
                             </div>
                         </div>
