--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -888,7 +888,7 @@
                         </div>
                     </div>
 
-                    <div class="stat-card w-full flex items-center justify-between p-4 rounded-lg shadow-md">
+                    <div class="card full-width flex items-center justify-between p-4 rounded-lg shadow-md">
   <div class="flex items-center space-x-4">
     <!-- Icon -->
     <div class="stat-icon p-3 bg-amber-100 text-amber-600 rounded-full">
@@ -904,7 +904,7 @@
 
   <!-- Button -->
   <button id="requestPayoutBtn" class="px-4 py-2 bg-amber-600 text-white rounded hover:bg-amber-700 transition duration-200 focus:outline-none focus:ring-2 focus:ring-amber-500">
-    <i class="fas fa-wallet mr-2"></i> Request Withdrawal
+    <i class="fas fa-wallet mr-2"></i> Withdraw
   </button>
 </div>
 
@@ -946,6 +946,7 @@
                               <div id="pendingBadge" class="hidden mt-2 px-3 py-1 bg-amber-100 text-amber-700 rounded-full text-sm font-medium">
         Pending Request: EGP 0.00
                               </div>
+                              </br>
                              <div id="payout-output"></div>
                             </div>
                         </div>
