--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -887,7 +887,7 @@
                             </form>
                         </div>
                     </div>
-
+<div class="card full-width">
                     <div class="stat-card full-width flex items-center justify-between p-4 rounded-lg shadow-md">
   <div class="flex items-center space-x-4">
     <!-- Icon -->
@@ -929,7 +929,7 @@
   </div>
 </div>
 
-
+</div>
                       
                         </div>
 
