--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -951,8 +951,8 @@
     Pending Request: EGP 0.00
   </div>
   
-  <div class="event-list">
-    <div id="payout-output" class="rounded-lg shadow-sm p-4 ">
+  <div>
+    <div id="payout-output">
       <!-- Payout content will appear here -->
     </div>
   </div>
