--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -37,6 +37,26 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
     
     <!-- Custom CSS -->
+<script>
+// tailwind.config.js
+module.exports = {
+  theme: {
+    extend: {
+      animation: {
+        pulse: 'pulse 2s ease-in-out infinite',
+        bounce: 'bounce 1.4s infinite'
+      },
+      keyframes: {
+        bounce: {
+          '0%, 100%': { transform: 'translateY(0)' },
+          '50%': { transform: 'translateY(-4px)' }
+        }
+      }
+    }
+  }
+}
+  </script>
+  
     <style>
         /* Add your custom styles here */
         
