--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -964,7 +964,7 @@ module.exports = {
                             </button>
                         </div>
                         <div class="card-body p-4">
-  <div id="pendingBadg" class="hidden"></div>
+  <div id="pendingBadg" class="hidden w-full"></div>
   
   <div>
     <div id="payout-output">
