--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -267,7 +267,8 @@
 </div>
                             <div class="card-body">
                                 <div class="chart-container">
-                                    <canvas id="packagePerformanceChart"></canvas>
+                                    <!-- Add or correct the canvas element -->
+<canvas id="packagePerformanceChart" width="400" height="200"></canvas>
                                 </div>
                             </div>
                         </div>
