--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -292,7 +292,7 @@
                             </li>
                         </ul>
                     </div>
-                    <a href="#" id="newTripBtn" class="hidden bg-gradient-to-r from-amber-500 to-amber-600 hover:from-amber-600 hover:to-amber-700 text-white p-3 rounded-full text-sm font-medium shadow-sm transition-all">
+                    <a href="#" aria-label="Add new trip" id="newTripBtn" class="hidden bg-gradient-to-r from-amber-500 to-amber-600 hover:from-amber-600 hover:to-amber-700 text-white p-3 rounded-full text-sm font-medium shadow-sm transition-all">
                         <i class='bx bxs-plus-circle'></i>
                         <span class="text">Add trip</span>
                     </a>
