--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -329,7 +329,7 @@
                         <button id="tripListTab" class="px-1 py-2 font-medium tab-active whitespace-nowrap text-sm sm:text-base">
                             <i class="fas fa-list mr-2"></i>Trip List
                         </button>
-                        <button id="tripEditorTab" class="px-1 py-2 font-medium text-slate-500 whitespace-nowrap text-sm sm:text-base">
+                        <button id="tripEditorTab" class="px-1 py-2 font-medium whitespace-nowrap text-sm sm:text-base">
                             <i class="fas fa-edit mr-2"></i>Trip Editor
                         </button>
                     </div>
