--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -260,12 +260,7 @@
     <h2 class="font-medium text-lg flex items-center">
         <i class="fas fa-chart-line text-amber-500 mr-2"></i> Trip Performance
     </h2>
-    <div class="card-actions">
-        <select id="packagePerformanceMetric" class="filter-btn">
-            <option value="revenue">By Revenue</option>
-            <option value="bookings">By Bookings</option>
-        </select>
-    </div>
+    
 </div>
                             <div class="card-body">
                                 <div class="chart-container">
@@ -735,10 +730,10 @@
 
                     <!-- Tabs for New and Confirmed Bookings -->
                     <div class="flex mb-3 sm:mb-4 space-x-1 sm:space-x-2 overflow-x-auto pb-1">
-                        <button id="allBookingsTab" class="tab-button active" onclick="switchTab('all')">
+                        <button id="allBookingsTab" class="tab-button" onclick="switchTab('all')">
                             <i class="fas fa-list mr-1 sm:mr-2"></i> <span class="hidden sm:inline">All</span>
                         </button>
-                        <button id="newBookingsTab" class="tab-button" onclick="switchTab('new')">
+                        <button id="newBookingsTab" class="tab-button active" onclick="switchTab('new')">
                             <i class="fas fa-clock mr-1 sm:mr-2"></i> <span class="hidden sm:inline">New</span>
                         </button>
                         <button id="confirmedBookingsTab" class="tab-button" onclick="switchTab('confirmed')">
