--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -822,12 +822,18 @@
             <!-- Modal Footer -->
             <div class="p-4 bg-gray-900/50 border-t border-gray-700 sticky bottom-0">
                 <div class="flex justify-end gap-3">
+                  
                     <button onclick="closeModal()" class="px-4 py-2 rounded-lg bg-gray-700 hover:bg-gray-600 transition-colors">
                         Close
                     </button>
                     <a id="whatsappButton" href="#" target="_blank" class="px-4 py-2 rounded-lg bg-green-600 hover:bg-green-700 transition-colors flex items-center">
             <i class="fab fa-whatsapp mr-2"></i> WhatsApp
         </a>
+                  <select onchange="updateBookingStatus('${escapedRefNumber}', this.value)" class="status-badge bg-gray-700 text-white rounded p-1">
+                        <option disabled value="new" ${resStatus === 'new' ? 'selected' : ''}>new</option>
+                        <option value="confirmed" ${resStatus === 'confirmed' ? 'selected' : ''}>Confirmed</option>
+                        <option value="no show" ${resStatus === 'no show' ? 'selected' : ''}>No Show</option>
+                    </select>
                 </div>
             </div>
         </div>
