--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -851,8 +851,8 @@
                     <a id="whatsappButton" href="#" target="_blank" class="px-4 py-2 rounded-lg bg-green-600 hover:bg-green-700 transition-colors flex items-center">
             <i class="fab fa-whatsapp mr-2"></i> WhatsApp
         </a>
-                  <div id="statusDropdownContainer">
-                        <!-- Status dropdown will be injected here -->
+                   <div id="confirmButtonContainer">
+                        <!-- Confirm button will be injected here -->
                     </div>
                 </div>
             </div>
