--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -738,7 +738,7 @@
                             <div class="flex justify-between items-center w-full">
                                 <select id="statusFilter" class="px-2 py-1 sm:px-3 sm:py-2 rounded-lg bg-gray-800 border border-gray-700 focus:outline-none focus:ring-2 focus:ring-amber-500 text-sm sm:text-base">
                                     <option value="all">All Statuses</option>
-                                    <option value="new">New</option>
+                                    <option selected value="new">New</option>
                                     <option value="confirmed">Confirmed</option>
                                     <option value="No Show">No Show</option>
                                     <option value="cancelled">Cancelled</option>
