--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -738,7 +738,7 @@
                             <div class="flex justify-between items-center w-full">
                                 <select id="statusFilter" class="px-2 py-1 sm:px-3 sm:py-2 rounded-lg bg-gray-800 border border-gray-700 focus:outline-none focus:ring-2 focus:ring-amber-500 text-sm sm:text-base">
                                     <option value="all">All Statuses</option>
-                                    <option selected value="new">New</option>
+                                    <option value="new">New</option>
                                     <option value="confirmed">Confirmed</option>
                                     <option value="No Show">No Show</option>
                                     <option value="cancelled">Cancelled</option>
@@ -752,10 +752,10 @@
 
                     <!-- Tabs for New and Confirmed Bookings -->
                     <div class="flex mb-3 sm:mb-4 space-x-1 sm:space-x-2 overflow-x-auto pb-1">
-                        <button id="allBookingsTab" class="tab-button" onclick="switchTab('all')">
+                        <button id="allBookingsTab" class="tab-button active" onclick="switchTab('all')">
                             <i class="fas fa-list mr-1 sm:mr-2"></i> <span class="hidden sm:inline">All</span>
                         </button>
-                        <button id="newBookingsTab" class="tab-button active" onclick="switchTab('new')">
+                        <button id="newBookingsTab" class="tab-button" onclick="switchTab('new')">
                             <i class="fas fa-clock mr-1 sm:mr-2"></i> <span class="hidden sm:inline">New</span>
                         </button>
                         <button id="confirmedBookingsTab" class="tab-button" onclick="switchTab('confirmed')">
