--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -196,6 +196,8 @@
                     <span class="text text-center">Profile</span>
                 </a>
             </li>
+        </ul>
+          <ul class="side-menu">
             <li>
                 <a href="#" id="logoutBtn" class="logoutBtn">
                     <i class='bx bxs-log-out-circle'></i>
