--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -200,7 +200,7 @@
           <ul class="side-menu">
             <li>
                 <a href="#" id="logoutBtn" class="logoutBtn">
-                    <i class="bx bx-arrow-out-left-square-half"></i>
+                    <i class='bx bx-arrow-out-left-square-half'></i>
                     <span class="text">Logout</span>
                 </a>
             </li>
