--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -184,7 +184,7 @@
             </li>
             <li data-section="withdraw">
                 <a href="#">
-                    <i class='bx bx-money'></i>
+                    <i class='bx bx-credit-card'></i>
                     <span class="text">payout</span>
                 </a>
             </li>
@@ -200,7 +200,7 @@
           <ul class="side-menu">
             <li>
                 <a href="#" id="logoutBtn" class="logoutBtn">
-                    <i class='bx bx-arrow-out-left-square-half'></i>
+                    <i class='bx bx-log-out'></i>
                     <span class="text">Logout</span>
                 </a>
             </li>
