--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -178,7 +178,7 @@
             </li>
             <li data-section="reservation">
                 <a href="#">
-                    <i class="bx bxs-file-pdf"></i>
+                    <i class="bx bx-calendar"></i>
                     <span class="text">Reservations</span>
                 </a>
             </li>
