--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -214,7 +214,7 @@
         <nav>
             <i class='bx bx-menu'></i>
             <form action="#">
-                <div class="form-input" hidden>
+                <div class="form-input hidden">
                     <input type="search" placeholder="Search...">
                     <button type="submit" class="search-btn"><i class='bx bx-search'></i></button>
                 </div>
