--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -211,9 +211,11 @@
     <!-- CONTENT -->
     <section id="content">
         <!-- NAVBAR -->
-        <nav>
-            <i class='bx bx-menu'></i>
-             </nav>
+        <nav aria-label="Top navigation">
+            <button class="menu-toggle" aria-label="Toggle sidebar" aria-expanded="true">
+                <i class='bx bx-menu'></i>
+            </button>
+        </nav>
         <!-- NAVBAR -->
 
         <!-- MAIN CONTENT SECTIONS -->
