--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -213,7 +213,7 @@
         <!-- NAVBAR -->
         <nav>
             <i class='bx bx-menu'></i>
-            <form action="#" hidden>
+            <form action="#">
                 <div class="form-input">
                     <input type="search" placeholder="Search...">
                     <button type="submit" class="search-btn"><i class='bx bx-search'></i></button>
