--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -148,6 +148,7 @@
 
           /* Modal animations */
 #pickupTimeModal {
+  z-index: 1000;
     opacity: 0;
     pointer-events: none;
     transition: opacity 0.3s ease;
