--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -146,26 +146,36 @@
     color: #fff;
 }
 
-          /* Modal animations */
-#pickupTimeModal {
-  z-index: 1000;
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.3s ease;
+          #pickupTimeModal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999; /* Very high z-index to ensure it's on top */
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease;
 }
 
 #pickupTimeModal.show {
-    opacity: 1;
-    pointer-events: auto;
+  opacity: 1;
+  visibility: visible;
 }
 
-#pickupTimeModal .glass-card {
-    transform: translateY(-20px);
-    transition: transform 0.3s ease;
-}
-
-#pickupTimeModal.show .glass-card {
-    transform: translateY(0);
+#pickupTimeModal .modal-content {
+  background: #222;
+  padding: 2rem;
+  border-radius: 10px;
+  border: 1px solid #ffc107;
+  max-width: 400px;
+  width: 90%;
+  z-index: 10000; /* Even higher than the overlay */
+  position: relative;
 }
       
     </style>
