--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -177,29 +177,7 @@
   z-index: 10000; /* Even higher than the overlay */
   position: relative;
 }
-
-
-      /* Flatpickr Time Picker Customization */
-.flatpickr-time .numInputWrapper span.arrowUp:after {
-  border-bottom-color: #ffc107;
-}
-.flatpickr-time .numInputWrapper span.arrowDown:after {
-  border-top-color: #ffc107;
-}
-.flatpickr-time input:hover, 
-.flatpickr-time .flatpickr-am-pm:hover {
-  background: #333;
-}
-.flatpickr-time input {
-  color: white;
-}
-.flatpickr-calendar {
-  background: #222;
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
-}
-.flatpickr-time .numInputWrapper {
-  width: 40%;
-}
+      
     </style>
 </head>
 <body>
@@ -869,7 +847,7 @@
 
 
 <!-- Pickup Time Modal -->
-<div id="pickupTimeModal" class="fixed inset-0 z-[99999] hidden flex items-center justify-center p-4">
+<div id="pickupTimeModal" class="fixed inset-0 z-[9999] hidden flex items-center justify-center p-4">
     <!-- Backdrop -->
     <div class="absolute inset-0 bg-black bg-opacity-70"></div>
     
@@ -890,7 +868,7 @@
                 <div class="space-y-4">
                     <div>
                         <label for="pickupTimeInput" class="block text-sm font-medium text-gray-300 mb-2">Pickup Time</label>
-                        <input type="text" id="pickupTimeInput" placeholder="Select time" readonly>
+                        <input type="time" id="pickupTimeInput" class="w-full p-3 bg-gray-800 border border-gray-700 rounded-lg text-white focus:ring-2 focus:ring-amber-500 focus:border-amber-500">
                     </div>
                     <p class="text-sm text-gray-400">Please confirm the pickup time with the guest before submitting.</p>
                 </div>
