--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -870,7 +870,7 @@
                         <label for="pickupTimeInput" class="block text-sm font-medium text-gray-300 mb-2">Pickup Time</label>
                         <input type="time" id="pickupTimeInput" class="w-full p-3 bg-gray-800 border border-gray-700 rounded-lg text-white focus:ring-2 focus:ring-amber-500 focus:border-amber-500">
                     </div>
-                    <p class="text-sm text-gray-400">Please confirm the pickup time with the guest before submitting.</p>
+                    <p class="text-sm text-gray-400">Please enter your pickup time first so you can confirm this reservation.</p>
                 </div>
             </div>
             
@@ -930,6 +930,8 @@
                         <!-- Confirm button will be injected here -->
                     </div>
                 </div>
+              <p class="text-sm text-gray-400">Please confirm the reservation first so you can contact the guest.</p>
+                
             </div>
         </div>
     </div>
