--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -930,7 +930,7 @@
                         <!-- Confirm button will be injected here -->
                     </div>
                 </div>
-              <p class="text-sm mt-4 text-gray-400">Confirm to contact the guest.</p>
+              <p class="text-sm mt-4 text-gray-400">Guest Details available only in confirmed reservations.</p>
             </div>
         </div>
     </div>
