--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -492,8 +492,8 @@
                                                             
                                                         </div>
                                                     </div>
-                                                   <div class="mb-4">
-  <label for="cprice" class="block text-sm font-medium text-gray-300">Children (5-12) Price (EGP)</label>
+                                                   <div>
+  <label for="cprice" class="block text-sm font-medium mb-1">Children (5-12) Price (EGP) *</label>
                                                      <div class="flex">
                                                             <span class="inline-flex items-center px-3 rounded-l-lg border border-r-0 border-slate-800 bg-slate-800 text-slate-50 text-sm">
                                                                 EGP 
@@ -502,7 +502,7 @@
          class="w-full p-2 input-field rounded text-sm focus:ring-2 focus:ring-amber-500" 
          placeholder="Enter children price" required>
 </div></div>
-
+</div>
 
                                                   
                                                     <div>
