--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -488,7 +488,7 @@
                                                                 EGP 
                                                             </span>
                                                             
-                                                            <input type="number" id="price" required class="flex-1 min-w-0 block w-full p-3 rounded-none rounded-r-lg input-field text-sm focus:ring-2 focus:ring-amber-500">
+                                                            <input type="number" id="price" required placeholder="Enter Adult price" class="flex-1 min-w-0 block w-full p-3 rounded-none rounded-r-lg input-field text-sm focus:ring-2 focus:ring-amber-500">
                                                             
                                                         </div>
                                                     </div>
@@ -498,9 +498,8 @@
                                                             <span class="inline-flex items-center px-3 rounded-l-lg border border-r-0 border-slate-800 bg-slate-800 text-slate-50 text-sm">
                                                                 EGP 
                                                             </span>
-  <input type="number" id="cprice" name="cprice" step="0.01" min="0" 
-         class="w-full p-2 input-field rounded text-sm focus:ring-2 focus:ring-amber-500" 
-         placeholder="Enter children price" required>
+  <input type="number" id="cprice" name="cprice" required placeholder="Enter children price" class="flex-1 min-w-0 block w-full p-3 rounded-none rounded-r-lg input-field text-sm focus:ring-2 focus:ring-amber-500">
+
 </div></div>
 </div>
 
