--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -504,7 +504,7 @@
 </div>
 
                                                   
-                                                    <div>
+                                                    <div class="space-y-4">
                                                         <label for="duration" class="block text-sm font-medium mb-1">Duration*</label>
                                                         <input type="text" id="duration" required class="w-full p-3 input-field rounded-lg text-sm focus:ring-2 focus:ring-amber-500" placeholder="4 hours">
                                                     </div>
