--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -5,7 +5,9 @@
     <meta http-equiv="origin-trial" content="your-firebase-origin-trial-token-if-any">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard || Discover Sharm</title>
-    
+    <meta name="theme-color" content="#FF5722">
+    <!-- لون شريط الحالة في Safari/iOS -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <!-- Boxicons -->
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link href='https://www.discover-sharm.com/admin/style.css' rel='stylesheet'>
