--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -5,7 +5,7 @@
     <meta http-equiv="origin-trial" content="your-firebase-origin-trial-token-if-any">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard || Discover Sharm</title>
-    <meta name="theme-color" content="#FF5722">
+    <meta name="theme-color" content="#1A1A2E">
     <!-- لون شريط الحالة في Safari/iOS -->
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <!-- Boxicons -->
