--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard || Discover Sharm</title>
     <meta name="theme-color" content="#1A1A2E">
-    <!-- لون شريط الحالة في Safari/iOS -->
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <!-- لـ iOS -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <!-- Boxicons -->
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link href='https://www.discover-sharm.com/admin/style.css' rel='stylesheet'>
