--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -14,6 +14,7 @@
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="application-name" content="DS Admin">
+<meta name="msapplication-config" content="/admin/browserconfig.xml">
 <meta name="apple-mobile-web-app-title" content="DS Admin">
 <meta name="msapplication-starturl" content="/admin/">
 
