--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -1159,30 +1159,40 @@
 
   // Handle before install prompt
   let deferredPrompt;
-  window.addEventListener('beforeinstallprompt', (e) => {
-    // Prevent Chrome 67 and earlier from automatically showing the prompt
-    e.preventDefault();
-    // Stash the event so it can be triggered later
-    deferredPrompt = e;
-    
-    // Show install button (you can add this to your UI)
-    const installButton = document.createElement('button');
-    installButton.textContent = 'Install App';
-    installButton.className = 'bg-amber-500 text-white px-4 py-2 rounded-lg fixed bottom-4 right-4 z-50';
-    installButton.onclick = () => {
-      // Show the install prompt
-      deferredPrompt.prompt();
-      // Wait for the user to respond to the prompt
-      deferredPrompt.userChoice.then((choiceResult) => {
-        if (choiceResult.outcome === 'accepted') {
-          console.log('User accepted the install prompt');
-        } else {
-          console.log('User dismissed the install prompt');
-        }
-        deferredPrompt = null;
-      });
-    };
-    document.body.appendChild(installButton);
+
+window.addEventListener('beforeinstallprompt', (e) => {
+  e.preventDefault();
+  deferredPrompt = e;
+  
+  // عرض زر التثبيت فقط في صفحة /admin/
+  if (window.location.pathname.startsWith('/admin/')) {
+    showInstallButton();
+  }
+});
+
+function showInstallButton() {
+  const existingBtn = document.getElementById('installAdminBtn');
+  if (existingBtn) return;
+  
+  const installBtn = document.createElement('button');
+  installBtn.id = 'installAdminBtn';
+  installBtn.innerHTML = `
+    <i class="fas fa-download mr-2"></i>
+    Install Admin App
+  `;
+  installBtn.className = 'fixed bottom-6 right-6 bg-amber-600 text-white px-4 py-3 rounded-full shadow-lg z-50';
+  
+  installBtn.addEventListener('click', async () => {
+    if (!deferredPrompt) return;
+    deferredPrompt.prompt();
+    const { outcome } = await deferredPrompt.userChoice;
+    if (outcome === 'accepted') {
+      installBtn.remove();
+    }
+    deferredPrompt = null;
+  });
+  
+  document.body.appendChild(installBtn);
   });
 </script>
 
